The rest of adding auth to our tiy sports rails app

--- a/week-5/day-3/tiyrailssports/app/views/homepage/homepage.html.erb
+++ b/week-5/day-3/tiyrailssports/app/views/homepage/homepage.html.erb
@@ -1,4 +1,4 @@
-Home
-
-<%= link_to 'Teams', teams_path %>
-<%= link_to 'Players', players_path %>
+<% if logged_in? %>
+  <%= link_to 'Teams', teams_path %>
+  <%= link_to 'Players', players_path %>
+<% end %>
