--- a/week-5/day-3/tiyrailssports/app/views/homepage/homepage.html.erb
+++ b/week-5/day-3/tiyrailssports/app/views/homepage/homepage.html.erb
@@ -1,4 +1,5 @@
-<% if logged_in? %>
-  <%= link_to 'Teams', teams_path %>
-  <%= link_to 'Players', players_path %>
-<% end %>
+<div class="jumbotron">
+  <h1>TIY Sports</h1>
+  <p>The best sports management app on the planet</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+</div>
