--- a/week-5/day-3/tiyrailssports/app/views/players/edit.html.erb
+++ b/week-5/day-3/tiyrailssports/app/views/players/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', player: @player %>
 
 <%= link_to 'Show', @player %> |
-<%= link_to 'Back', players_path %>
+<%= link_to 'Back', players_path, class: "btn btn-default" %>
