--- a/week-5/day-3/tiyrailssports/app/views/players/index.html.erb
+++ b/week-5/day-3/tiyrailssports/app/views/players/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Players</h1>
+<h1><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Players</h1>
 
-<table>
+<table class="table table-bordered table-hover table-striped table-condensed table-responsive">
   <thead>
     <tr>
       <th>Name</th>
@@ -15,14 +15,26 @@
 
   <tbody>
     <% @players.each do |player| %>
-      <tr>
+      <% if player.name.blank? %>
+        <tr class="success">
+      <% else %>
+        <tr>
+      <% end %>
         <td><%= player.name %></td>
         <td><%= player.age %></td>
         <td><%= player.shirt_size %></td>
         <td><%= player.birthday %></td>
         <td><%= link_to 'Show', player %></td>
-        <td><%= link_to 'Edit', edit_player_path(player) %></td>
-        <td><%= link_to 'Destroy', player, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to edit_player_path(player) do %>
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+          <% end %>
+        </td>
+        <td>
+          <%= link_to player, method: :delete, data: { confirm: 'Are you sure?' } do %>
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +42,4 @@
 
 <br>
 
-<%= link_to 'New Player', new_player_path %>
+<%= link_to 'New Player', new_player_path, class: "btn btn-primary" %>
