--- a/week-5/day-3/tiyrailssports/app/views/session/new.html.erb
+++ b/week-5/day-3/tiyrailssports/app/views/session/new.html.erb
@@ -1,7 +1,13 @@
-<h1>Login</h1>
-
-<%= form_tag login_path do %>
-  Email: <%= text_field_tag :email %>
-  Password: <%= password_field_tag :password %>
-  <%= submit_tag "Submit" %>
-<% end %>
+<div class="row">
+  <%= form_tag login_path, class: "form col-lg-2 col-lg-offset-5" do %>
+    <div class="form-group">
+      <%= text_field_tag :email, nil, class: "form-control input lg", placeholder: "Email" %>
+    </div>
+    <div class="form-group">
+      <%= password_field_tag :password, nil, class: "form-control input lg", placeholder: "Password" %>
+    </div>
+    <div class="form-group">
+      <%= submit_tag "Submit", class: "btn btn-primary btn-lg btn-block" %>
+    </div>
+  <% end %>
+</div>
