--- a/week-6/day-1/tiyrailssports/app/views/session/new.html.erb
+++ b/week-6/day-1/tiyrailssports/app/views/session/new.html.erb
@@ -1,13 +1,2 @@
-<div class="row">
-  <%= form_tag login_path, class: "form col-lg-2 col-lg-offset-5" do %>
-    <div class="form-group">
-      <%= text_field_tag :email, nil, class: "form-control input lg", placeholder: "Email" %>
-    </div>
-    <div class="form-group">
-      <%= password_field_tag :password, nil, class: "form-control input lg", placeholder: "Password" %>
-    </div>
-    <div class="form-group">
-      <%= submit_tag "Submit", class: "btn btn-primary btn-lg btn-block" %>
-    </div>
-  <% end %>
-</div>
+
+<%= link_to 'Login with Github', auth_path(provider: 'github') %>
