Adds user name to the user model, allows it to be provided at sign up, uses it in the application layout, also tries to turn on lockable
Lockable works but we are missing the warnings on the page

--- a/week-6/day-3/devise-tiysports/app/views/layouts/application.html.erb
+++ b/week-6/day-3/devise-tiysports/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body>
     <% if user_signed_in? %>
        <p>
-       Welcome: <%= current_user.email %>
+       Welcome: <%= current_user.name %>
        </p>
        <p>
        We haven't seen you in: <%= distance_of_time_in_words_to_now(current_user.last_sign_in_at) %>
