--- a/week-6/day-3/devise-tiysports/app/views/devise/registrations/new.html.erb
+++ b/week-6/day-3/devise-tiysports/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,18 @@
 <h2>Sign up</h2>
 
+<p id="notice"><%= notice %></p>
+
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name, autofocus: true %>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email %>
   </div>
 
   <div class="field">
