--- a/week-6/day-3/adams-has-many-glossary/app/views/categories/show.html.haml
+++ b/week-6/day-3/adams-has-many-glossary/app/views/categories/show.html.haml
@@ -8,8 +8,7 @@
   = @category.subject
 %p
   %b Terms:
-  - @category.terms.each do |term|
-    = term.name
+  = @category.terms.map { |term| term.name }.to_sentence
 = link_to 'Edit', edit_category_path(@category)
 \|
 = link_to 'Back', categories_path
