--- a/week-8/day-3/all-ruby-books/app/assets/stylesheets/application.scss
+++ b/week-8/day-3/all-ruby-books/app/assets/stylesheets/application.scss
@@ -10,10 +10,10 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
+ *= require 'bootstrap-generators'
+ *= require 'bootstrap-variables'
+ *= require 'font-awesome'
+ *= require 'bootstrap-social'
+ *= require 'books'
  *= require_self
  */
-
-
-@import 'font-awesome';
-@import 'bootstrap-social';
