--- a/week-8/day-3/all-ruby-books/app/views/layouts/application.html.erb
+++ b/week-8/day-3/all-ruby-books/app/views/layouts/application.html.erb
@@ -29,14 +29,19 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "#", class: "navbar-brand" do %>
+        <%= link_to root_path, class: "navbar-brand" do %>
           AllRubyBooks
         <% end %>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><%= link_to "Home", "#" %></li>
+          <li class="active"><%= link_to "Home", root_path %></li>
         </ul>
+        <form action="<%= books_path %>" class="navbar-form navbar-right">
+          <div class="form-group">
+            <%= select_tag "author_id", options_from_collection_for_select(@authors, "id", "name"), prompt: "Author", class: "form-control" %>
+          </div>
+        </form>
       </div>
     </div>
   </nav>
