Converting our app to React. Hooray!

--- a/week-8/day-3/all-ruby-books/app/views/books/index.html.erb
+++ b/week-8/day-3/all-ruby-books/app/views/books/index.html.erb
@@ -1,5 +1,3 @@
-<div id="books" class="row">
-  <%= render @books %>
-</div>
+<%= react_component('Books', { books: @books, authors: @authors }, {prerender: true})%>
 
 <div class="log"><div>
